[package]
name = "line-pdf-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
lopdf = "0.31"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["serve-dir"] }
